# IntelliPipe

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  alembic.ini  app.py  docker-compose.yml  fix_lint.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: intellipipe_dags.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/staging/: schema.yml  stg_raw_orders.sql
great_expectations/suites/: raw_orders.critical.json
infra/k8s/: intellipipe.yaml
infra/prometheus/: prometheus.yml
requirements/: api.txt  base.txt  pipeline.txt  spark.txt  test.txt
scripts/: init-db.sh  seed_data.py
src/agents/: alert_processor.py  langchain_agent.py
src/anomaly/: ensemble.py
src/api/: main.py
src/core/: config.py  logging.py  telemetry.py
src/db/: models.py
src/db/migrations/: env.py
src/db/migrations/versions/: 0001_initial_schema.py
src/db/repositories/: incident_repo.py
src/integrations/: github_client.py  notifications.py
src/pipeline/: kafka_producer.py  spark_consumer.py
src/quality/: ge_runner.py
src/rag/: rag_engine.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/load/: locustfile.py
tests/unit/: test_intellipipe.py
